force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/FinServ__AssetsAndLiabilities__c.object-meta.xml
<CustomObject>
    <description
  >Assets or liabilities that are not represented in a client&#39;s financial accounts, such as real estate or collectibles.</description>
    <label>Assets and Liabilities</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Asset or Liability Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assets and Liabilities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>