force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Property Address</label>
    <type>TextArea</type>
</CustomField>