force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/Asset_Credit_Balance__c.field-meta.xml
<CustomField>
    <fullName>Asset_Credit_Balance__c</fullName>
    <label>Asset Credit Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>