force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/Asset_Credit_Balance_After__c.field-meta.xml
<CustomField>
    <fullName>Asset_Credit_Balance_After__c</fullName>
    <label>Asset Credit Balance After</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>