force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/Average_Monthly_Usage__c.field-meta.xml
<CustomField>
    <fullName>Average_Monthly_Usage__c</fullName>
    <label>Average Balance (6-12 months)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>