force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/Description_of_Asset__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Asset__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description of Asset</label>
    <type>TextArea</type>
</CustomField>