force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/Education_Tax__c.field-meta.xml
<CustomField>
    <fullName>Education_Tax__c</fullName>
    <label>Education Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>