force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/Financial_Institution__c.field-meta.xml
<CustomField>
    <fullName>Financial_Institution__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Financial Institution</label>
    <length>40</length>
    <type>Text</type>
</CustomField>