force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/FinServ__Amount__c.field-meta.xml
<CustomField>
    <fullName>FinServ__Amount__c</fullName>
    <description
  >Amount of an asset (positive) or liability (negative).</description>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>