force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/Full_Details__c.field-meta.xml
<CustomField>
    <fullName>Full_Details__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >This field represents the screen type selection (Short Summary or Full Details) in the Assets/Liabilities flow.</description>
    <label>Full Details?</label>
    <type>Checkbox</type>
</CustomField>