force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/Lender__c.field-meta.xml
<CustomField>
    <fullName>Lender__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Financial Institution/Lender</label>
    <length>40</length>
    <type>Text</type>
</CustomField>