force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/Loan_Balance_After__c.field-meta.xml
<CustomField>
    <fullName>Loan_Balance_After__c</fullName>
    <label>Loan Balance After</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>