force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/Loan_Balance_Cal__c.field-meta.xml
<CustomField>
    <fullName>Loan_Balance_Cal__c</fullName>
    <formula>Loan_Balance_Prior__c  *  Percent_Applicant_Portion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loan Balance Cal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>