force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/Loan_Balance_Prior__c.field-meta.xml
<CustomField>
    <fullName>Loan_Balance_Prior__c</fullName>
    <label>Loan Balance Prior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>