force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/Loan_Repaid_from_Facility__c.field-meta.xml
<CustomField>
    <fullName>Loan_Repaid_from_Facility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Loan Repaid from Facility</label>
    <type>Checkbox</type>
</CustomField>