force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/Loan_Repaid_From_Facility_List__c.field-meta.xml
<CustomField>
    <fullName>Loan_Repaid_From_Facility_List__c</fullName>
    <label>Loan Repaid From Facility</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>