force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/Monthly_Contribution_Before_Loan__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Contribution_Before_Loan__c</fullName>
    <label>Monthly Contribution (Before Loan)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>