force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payment__c</fullName>
    <description>Loan Detail</description>
    <label>Monthly Payment After</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>