force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/Monthly_Payment_Calc__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payment_Calc__c</fullName>
    <formula>Monthly_Payment_Prior__c *  Percent_Applicant_Portion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Payment Calc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>