force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/Monthly_Premium_Life_Insurance_Number__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Premium_Life_Insurance_Number__c</fullName>
    <label>Monthly Premium ( Life Insurance)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>