force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/Monthly_Saving_Investment_after_Loan__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Saving_Investment_after_Loan__c</fullName>
    <label>Monthly Saving/Investment (after Loan)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>