force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/Monthly_Savings_Investment__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Savings_Investment__c</fullName>
    <description>Prior to Loan</description>
    <label>Monthly Savings/Investment Prior to Loan</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>