force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/NHT_Contributions_Monthly__c.field-meta.xml
<CustomField>
    <fullName>NHT_Contributions_Monthly__c</fullName>
    <label>NHT Contributions Monthly</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>