force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/NIS_Contributions_Monthly__c.field-meta.xml
<CustomField>
    <fullName>NIS_Contributions_Monthly__c</fullName>
    <label>NIS Contributions Monthly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>