force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/Overdraft_Limit__c.field-meta.xml
<CustomField>
    <fullName>Overdraft_Limit__c</fullName>
    <description>Current Account Only</description>
    <label>Overdraft Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>