force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/Pension_Scheme__c.field-meta.xml
<CustomField>
    <fullName>Pension_Scheme__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pension Scheme</label>
    <length>40</length>
    <type>Text</type>
</CustomField>