force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/Percent_Applicant_Portion__c.field-meta.xml
<CustomField>
    <fullName>Percent_Applicant_Portion__c</fullName>
    <label>Percent Applicant Portion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>