force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/Percent_Average_Monthly_User__c.field-meta.xml
<CustomField>
    <fullName>Percent_Average_Monthly_User__c</fullName>
    <label>Percent Average Monthly Useage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>