force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/Percent_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Percent_Ownership__c</fullName>
    <label>Percent Ownership</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>