force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/Rent_Board_Monthly_Before__c.field-meta.xml
<CustomField>
    <fullName>Rent_Board_Monthly_Before__c</fullName>
    <label>Rent/Board Monthly Before</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>