force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/Savings_Deposit_Investments__c.field-meta.xml
<CustomField>
    <fullName>Savings_Deposit_Investments__c</fullName>
    <label>Savings/Deposit/Investments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>