force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/Total_Contributions_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Total_Contributions_to_Date__c</fullName>
    <label>Total Contributions to Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>