force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/Total_Market_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Market_Value__c</fullName>
    <label>Total Market Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>