force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/Total_Market_Value_Calc__c.field-meta.xml
<CustomField>
    <fullName>Total_Market_Value_Calc__c</fullName>
    <formula>Total_Market_Value__c *  Percent_Ownership__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Market Value Calc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>