force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/Type_of_Asset_Liability_Recording__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Asset_Liability_Recording__c</fullName>
    <label>Type of  Asset/Liability Recording</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Summary</fullName>
            </value>
            <value>
                <fullName>Detail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>