force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/Type_of_Card__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Card__c</fullName>
    <description>Type of line and Credit</description>
    <label>Type of Line/Credit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_Card_Type_Loan</valueSetName>
    </valueSet>
</CustomField>