force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/Type_of_Loan__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Loan__c</fullName>
    <label>Type of Loan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_Card_Type_Loan</valueSetName>
    </valueSet>
</CustomField>