force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/fields/Vehicle_Details__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Details__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vehicle Details (Year , Make , Model)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>