force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/recordTypes/Credit_Cards.recordType-meta.xml
<RecordType>
    <fullName>Credit_Cards</fullName>
    <active>true</active>
    <label>Credit Cards</label>
</RecordType>