force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/recordTypes/FinServ__NonfinancialAsset.recordType-meta.xml
<RecordType>
    <fullName>FinServ__NonfinancialAsset</fullName>
    <active>true</active>
    <description>Asset not represented in financial accounts, such as real estate or collectibles</description>
    <label>Asset</label>
</RecordType>