force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/recordTypes/Life_Insurance_Policies.recordType-meta.xml
<RecordType>
    <fullName>Life_Insurance_Policies</fullName>
    <active>true</active>
    <label>Life Insurance Policies</label>
</RecordType>