force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/recordTypes/Lines_of_Credit.recordType-meta.xml
<RecordType>
    <fullName>Lines_of_Credit</fullName>
    <active>true</active>
    <label>Lines of Credit</label>
</RecordType>