force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/recordTypes/Motor_Vehicle.recordType-meta.xml
<RecordType>
    <fullName>Motor_Vehicle</fullName>
    <active>true</active>
    <label>Motor Vehicle</label>
</RecordType>