force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/recordTypes/Other_Assets.recordType-meta.xml
<RecordType>
    <fullName>Other_Assets</fullName>
    <active>true</active>
    <label>Other Assets</label>
</RecordType>