force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/recordTypes/Other_Loans.recordType-meta.xml
<RecordType>
    <fullName>Other_Loans</fullName>
    <active>true</active>
    <label>Other Loans</label>
</RecordType>