force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/recordTypes/Other_Loans_Guaranteed.recordType-meta.xml
<RecordType>
    <fullName>Other_Loans_Guaranteed</fullName>
    <active>true</active>
    <label>Other Loans Guaranteed</label>
</RecordType>