force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/recordTypes/Overdraft_Limit.recordType-meta.xml
<RecordType>
    <fullName>Overdraft_Limit</fullName>
    <active>true</active>
    <label>Overdraft Limit</label>
</RecordType>