force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/recordTypes/Pension_Contributions_or_Individual.recordType-meta.xml
<RecordType>
    <fullName>Pension_Contributions_or_Individual</fullName>
    <active>true</active>
    <label>Pension Contributions or  Individual Retirement Schemes</label>
</RecordType>