force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/recordTypes/Savings_Current_Accounts_Investments.recordType-meta.xml
<RecordType>
    <fullName>Savings_Current_Accounts_Investments</fullName>
    <active>true</active>
    <label>Savings/Current Accounts and Investments</label>
</RecordType>