force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/validationRules/Cannot_have_Lender_if_there_is_no_loan.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_have_Lender_if_there_is_no_loan</fullName>
    <active>false</active>
    <description
  >If Lien on Asset is not true or the record type is not Other loan then there can be no Lender because there is no loan</description>
    <errorConditionFormula>AND( 
ISBLANK( Lender__c )  , 
OR (  Lien_on_Asset__c = False   ,  
RecordTypeId &lt;&gt; &quot;012q00000001hTzAAI&quot;)

)</errorConditionFormula>
    <errorMessage>You cannot have a Lender if there is no Loan</errorMessage>
</ValidationRule>