force-app/main/default/objects/FinServ__AssetsAndLiabilities__c/validationRules/Lender_cannot_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Lender_cannot_be_empty</fullName>
    <active>false</active>
    <description
  >If Lien on Asset is true or Asset record type is other Loan then lender cannot be empty.</description>
    <errorConditionFormula
  >AND(ISBLANK( Lender__c ),(OR (  Lien_on_Asset__c = True ,   RecordType.Name = &quot;Other_Loans&quot;)))</errorConditionFormula>
    <errorMessage
  >You must enter the name of the Lender for this loan</errorMessage>
</ValidationRule>